Monday Class - Quarantine day 5
wash your hands

--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,19 @@
     font-family: 'Titillium Web', sans-serif;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
 section {
     border: 1px red dotted;
-    
+    min-height: 100vh;
+    background-color: moccasin;
+}
+
+i {
+    color: mediumpurple;
 }
 
 /* Text Styles // start */
@@ -31,4 +41,44 @@ h5 {
 h6 {
 
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    display: inline;
+}
+
 /* Text Styles // end */
+
+
+
+
+/* CLASSES */
+
+.bgColorSection1 {
+    background-color: blueviolet;
+}
+
+.bgColorSection2 {
+    background-color: brown;
+}
+
+.bgColorSection3 {
+    background-color: aquamarine;
+}
+
+.bgColorSection4 {
+    background-color: lavender;
+    background-image: url("../img/7shifts-bZ3AqX6J7Cc-unsplash.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.fa-searchengin {
+    color: black;
+}
