--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,11 @@ body {
     padding: 0;
 }
 
+header {
+    display: flex;
+    justify-content: space-around;
+}
+
 section {
     border: 1px red dotted;
     min-height: 100vh;
