--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ li {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    /* padding-top: 20%; */
 }
 
 .bgColorSection1 {
