--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
 
 header {
     justify-content: space-around;
+    padding: 10px;
 }
 
 footer {
@@ -59,6 +60,32 @@ ul {
 
 li {
     display: inline;
+    padding: 1.2em;
+}
+
+a {
+    text-decoration: none;
+    /* color: black; */
+    /* margin: 0.8em; */
+}
+
+a:link {
+    color: black;
+}
+
+a:visited {
+    color: green;
+}
+
+a:active {
+    color: yellow;
+}
+
+a:hover {
+    color: red;
+    text-decoration: underline;
+    background-color: chartreuse;
+    /* padding: 0.12em; */
 }
 
 /* Text Styles // end */
@@ -108,6 +135,12 @@ li {
 .centerSectionCol {
     text-align: center;
 }
+
+.footer-menu {
+    display: block;
+    padding: 0 1.2em 1.2em 0;
+}
+
 
 /* ID  */
 
