--- a/css/style.css
+++ b/css/style.css
@@ -105,14 +105,14 @@ a:hover {
     height: 415px;
 }
 
-.col-1 {width: 8.33%;}
-.col-2 {width: 170px;}
+.col-1 {width: calc(100/12)%;}
+.col-2 {width: calc(100%/6);}
 .col-3 { }
 .col-4 {width: calc(100%/3);}
 .col-5 {width: 425px;}
 .col-6 {width: 50%;}
 .col-7 { }
-.col-8 { }
+.col-8 {width: calc(100/(12/8);}
 .col-9 { }
 .col-10 { }
 .col-11 { }
